--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -131,7 +131,7 @@ body {
   border-radius: 3px;
 }
 .bg-primary {
-  background-color: #865d14 !important;
+  background-color: #742307 !important;
 }
 .bg-success {
   background-color: #f7ed4a !important;
@@ -147,8 +147,8 @@ body {
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #865d14;
-  border-color: #865d14;
+  background-color: #742307;
+  border-color: #742307;
   color: #ffffff;
 }
 .btn-primary:hover,
@@ -156,14 +156,14 @@ body {
 .btn-primary.focus,
 .btn-primary.active {
   color: #ffffff;
-  background-color: #432f0a;
-  border-color: #432f0a;
+  background-color: #2c0d03;
+  border-color: #2c0d03;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff !important;
-  background-color: #432f0a !important;
-  border-color: #432f0a !important;
+  background-color: #2c0d03 !important;
+  border-color: #2c0d03 !important;
 }
 .btn-secondary,
 .btn-secondary:active {
@@ -311,22 +311,22 @@ body {
 .btn-primary-outline,
 .btn-primary-outline:active {
   background: none;
-  border-color: #2d1f07;
-  color: #2d1f07;
+  border-color: #140601;
+  color: #140601;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus,
 .btn-primary-outline.active {
   color: #ffffff;
-  background-color: #865d14;
-  border-color: #865d14;
+  background-color: #742307;
+  border-color: #742307;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
   color: #ffffff !important;
-  background-color: #865d14 !important;
-  border-color: #865d14 !important;
+  background-color: #742307 !important;
+  border-color: #742307 !important;
 }
 .btn-secondary-outline,
 .btn-secondary-outline:active {
@@ -463,7 +463,7 @@ body {
   border-color: #ffffff;
 }
 .text-primary {
-  color: #865d14 !important;
+  color: #742307 !important;
 }
 .text-secondary {
   color: #f7ed4a !important;
@@ -488,7 +488,7 @@ body {
 }
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #2d1f07 !important;
+  color: #140601 !important;
 }
 a.text-secondary:hover,
 a.text-secondary:focus {
@@ -540,8 +540,8 @@ a.text-black:focus {
   border-radius: 100px !important;
 }
 .mbr-gallery-filter li.active .btn {
-  background-color: #865d14;
-  border-color: #865d14;
+  background-color: #742307;
+  border-color: #742307;
   color: #ffffff;
 }
 .mbr-gallery-filter li.active .btn:focus {
@@ -558,11 +558,11 @@ a.text-black:focus {
 }
 a,
 a:hover {
-  color: #865d14;
+  color: #742307;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #e1a438;
+  color: #ec470e;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -680,7 +680,7 @@ blockquote {
   padding: 10px 0 10px 20px;
   font-size: 1.09rem;
   position: relative;
-  border-color: #865d14;
+  border-color: #742307;
   border-width: 3px;
 }
 ul,
@@ -768,7 +768,7 @@ pre {
   text-align: center;
   position: relative;
   border: 2px solid #c0a375;
-  border-color: #865d14;
+  border-color: #742307;
   color: #232323;
   cursor: pointer;
 }
@@ -779,7 +779,7 @@ pre {
 }
 .btn-social:hover {
   color: #fff;
-  background: #865d14;
+  background: #742307;
 }
 .btn-social + .btn {
   margin-left: .1rem;
@@ -787,11 +787,11 @@ pre {
 /* Footer */
 .mbr-footer-content li::before,
 .mbr-footer .mbr-contacts li::before {
-  background: #865d14;
+  background: #742307;
 }
 .mbr-footer-content li a:hover,
 .mbr-footer .mbr-contacts li a:hover {
-  color: #865d14;
+  color: #742307;
 }
 .footer3 input[type="email"],
 .footer4 input[type="email"] {
